*Empty MediaWiki Message*

--- a/2001.mw
+++ b/2001.mw
@@ -1,11 +1,10 @@
-==Likambo monɛnɛ==
+==Likambo monɛ́nɛ==
 
-==Mbotama==
+==Mbótama==
 
-==Liwa==
-*16 novembere: [[Laurent-Désiré Kabila]] (Mokambi-Ekólo ya [[Kɔ́ngɔ-Kinshasa]])
+==Liwâ==
+* [[16 ya sánzá zómí na mɔ̌kɔ́]] : [[Laurent-Désiré Kabila]] (Mokambi-Ekólo ya [[Kɔ́ngɔ-Kinshasa]])
 
-[[category:ya 21 sekulɔ]]
-
+[[category:bonkámá ya 21]]
 
 [[en:2001]]
