*Empty MediaWiki Message*

--- a/2006.mw
+++ b/2006.mw
@@ -6,7 +6,7 @@
 * 16 oktobele:  [[Baudoin Liwanga Maata]]: Gouverneur ya [[Kinsásá]]
 * 29 oktobele: [[Joseph Kabila|Joseph Kabila Kabange]]: [[Mokambi-Ekólo]] ya [[Kɔ́ngɔ-Kinshasa]] (58% voix)
 
-[[Category:ya 21 sekulɔ]]
+[[Category:Bonkámá ya 21]]
 
 [[af:2006]]
 [[als:2006]]
