*Empty MediaWiki Message*

--- a/2003.mw
+++ b/2003.mw
@@ -6,7 +6,7 @@
 * [[Joseph Kabila|Joseph Kabila Kabange]]: [[Mokambi-Ekólo]] ya [[Kɔ́ngɔ-Kinshasa]] ya yanuari [[2001]]; ekelemaki na 2003.
 
 [kobalola] 
-[[Category:ya 21 sekulɔ]]
+[[Category:Bonkámá ya 21]]
 
 
 [[en:2003]]
