*Empty MediaWiki Message*

--- a/1961.mw
+++ b/1961.mw
@@ -7,7 +7,7 @@
 ==Liwâ==
 * [[17 ya sanza ya mɔ̌kɔ́]]: [[Patrice Lumumba|Patrice Émery Lumumba]], Moyángeli mwa yambo ya Bulamatari o [[Kɔ́ngɔ-Kinshasa]].
 
-[[Category:ya 20 sekulɔ]]
+[[Category:Bonkámá ya 20|61]]
 
 [[de:1961]]
 [[en:1961]]
